--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
         <commons-discovery.version>20040218.194635</commons-discovery.version>
         <jregex.version>1.2_01</jregex.version>
         <commons-math.version>2.2</commons-math.version>
-        <guava.version>20.0</guava.version>
+        <guava.version>24.1.1-jre</guava.version>
         <jexample.version>4.4-378</jexample.version>
         <mockito-core.version>1.10.19</mockito-core.version>
         <junit.version>4.12</junit.version>
